# wclded3

./: .gitignore  CMakeLists.txt
code/gamedetour/: main.cpp
code/qcommon/: common.c  q_shared.cpp  q_shared.h
code/win32/: qe3.pdn
